--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,15 @@
 <main>
     <header><img src="../assets/logo.svg" alt="Fairhouse">Fairhouse</header>
     <section>
-        <app-housing-list></app-housing-list>
+        <app-housing-list [locationList]="housingLocationList"
+        (locationSelectedEvent)="updateSelectedLocation($event)"></app-housing-list>
     </section>
+    <article>
+        <img [src] = 'selectedLocation?.photo'>
+        <p>{{selectedLocation?.name}}</p>
+        <p>{{selectedLocation?.availableUnits}}</p>
+        <p>{{selectedLocation?.city}}, {{selectedLocation?.state}}</p>
+        <p>{{selectedLocation?.laundry ? "Has laundry" : "Does not have laundry"}}</p>
+        <p>{{selectedLocation?.wifi ? "Has wifi" : "Does not have wifi"}}</p>
+    </article>
 </main>
