--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,13 @@
         (locationSelectedEvent)="updateSelectedLocation($event)"></app-housing-list>
     </section>
     <article>
+        <ng-container *ngIf="selectedLocation">
         <img [src] = 'selectedLocation?.photo'>
         <p>{{selectedLocation?.name}}</p>
         <p>{{selectedLocation?.availableUnits}}</p>
         <p>{{selectedLocation?.city}}, {{selectedLocation?.state}}</p>
         <p>{{selectedLocation?.laundry ? "Has laundry" : "Does not have laundry"}}</p>
         <p>{{selectedLocation?.wifi ? "Has wifi" : "Does not have wifi"}}</p>
+    </ng-container>
     </article>
 </main>
