--- a/src/app/housing-list/housing-list.component.html
+++ b/src/app/housing-list/housing-list.component.html
@@ -1,8 +1,9 @@
 <label for="location-search">Search for a new place</label>
 <input placeholder="Ex: Chicago" #search>
 <button (click)="searchHousingLocations(search.value)">Search</button>
-<hr>
-<article *ngFor="let location of results">
+<article *ngFor="let location of results" (click)="selectHousingLocation(location)">
+    <img [src]="location.photo" [alt]="location.name">
     <p>{{location.name}}</p>
+    <p>{{location.city}}, {{location.state}}</p>
     <button (click)="selectHousingLocation(location)">View</button>
 </article>
